# manuals

./: .gitlab-ci.yml  NEWS  README.md  app.devsuite.Manuals.Devel.json  manuals.doap  meson.build  meson_options.txt  org.gnome.Manuals.Devel.json
build-aux/flatpak/: libflatpak.json  libfoundry.json
data/: app.devsuite.Manuals.desktop.in  app.devsuite.Manuals.desktop.in.in  app.devsuite.Manuals.gschema.xml  app.devsuite.Manuals.metainfo.xml.in  app.devsuite.Manuals.metainfo.xml.in.in  app.devsuite.Manuals.service.in  meson.build  org.gnome.Manuals.gschema.xml  org.gnome.Manuals.metainfo.xml.in.in
data/icons/: meson.build
po/: LINGUAS  POTFILES  POTFILES.in  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hu.po  ia.po  id.po  it.po  ka.po  kab.po  kk.po  ko.po  kw.po  lo.po  lt.po  nb.po  ne.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+11 more)
src/: .manuals-window.ui.swp  main.c  manuals-application.c  manuals-book.c  manuals-book.h  manuals-bundle-dialog.c  manuals-bundle-dialog.ui  manuals-devhelp-importer.c  manuals-flatpak-importer.c  manuals-flatpak-installer.c  manuals-flatpak-reference.c  manuals-flatpak.c  manuals-flatpak.h  manuals-heading.c  manuals-heading.h  manuals-install-button.c  manuals-keyword.c  manuals-keyword.h  manuals-navigatable.c  manuals-navigatable.h  manuals-path-bar.c  manuals-path-bar.h  manuals-path-bar.ui  manuals-path-button.c  manuals-path-button.ui  manuals-progress.c  manuals-sdk-dialog.c  manuals-sdk-dialog.h  manuals-sdk-dialog.ui  manuals-sdk-installer.c  manuals-sdk-installer.h  manuals-sdk-reference.c  manuals-sdk-reference.h  manuals-sdk.c  manuals-search-entry.c  manuals-search-entry.h  manuals-search-entry.ui  manuals-search-model.c  manuals-search-model.h  manuals-search-view.c  (+21 more)
src/libide-tree/: ide-tree-expander.c  ide-tree.c
